fix menu display on small screen trial3

--- a/style.css
+++ b/style.css
@@ -103,7 +103,7 @@ nav .fa{
         right: -200px;
         text-align: left;
         z-index: 2;
-        transition: 1s;
+        
 
     }
     nav .fa{
